--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -1,6 +1,5 @@
-name: CI
+name: collect data
 
-# Controls when the action will run. 
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -20,6 +19,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run data collection
         run: |
+          mkdir data
+          mkdir data/source
           echo Retrieve data for total number of infections and DIVI data from https://github.com/entorb/COVID-19-Coronavirus-German-Regions/blob/master/data/de-states/de-state-DE-total.tsv,
           wget -o data/source/de-state-DE-total-infections-divi.tsv https://github.com/entorb/COVID-19-Coronavirus-German-Regions/blob/master/data/de-states/de-state-DE-total.tsv
           
