--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -24,6 +24,28 @@ jobs:
           
           echo Retrieve vaccinination rates from https://raw.githubusercontent.com/ard-data/2020-rki-impf-archive/master/data/9_csv_v2/all.csv
           wget -O data/source/all-vaccine.csv https://raw.githubusercontent.com/ard-data/2020-rki-impf-archive/master/data/9_csv_v2/all.csv
+
+    - name: Python Setup
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    
+    - name: Python Cached pip
+      uses: actions/cache@v2
+      with:
+        # This path is specific to Ubuntu
+        path: ~/.cache/pip
+        # Look to see if there is a cache hit for the corresponding requirements file
+        key: ${{ runner.os }}-pip-${{ hashFiles('py-requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+          ${{ runner.os }}-
+          
+    - name: Python Install requirements
+      run: pip install -r py-requirements.txt
+
+      - name: fetch-de-divi
+        run: python3 fetch-de-divi-V3.py
           
       - name: data commit new files
         run: |
