--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -45,7 +45,7 @@ jobs:
         run: pip install -r py-requirements.txt
 
       - name: fetch-de-divi
-        run: python3 fetch-de-divi-V3.py
+        run: python3 fetch-de-divi.py
           
       - name: data commit new files
         run: |
