--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -19,8 +19,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run data collection
         run: |
-          echo Retrieve data for total number of infections and DIVI data from https://raw.githubusercontent.com/entorb/COVID-19-Coronavirus-German-Regions/master/data/de-states/de-state-DE-total.tsv,
-          wget -O data/source/de-state-DE-total-infections-divi.tsv https://raw.githubusercontent.com/entorb/COVID-19-Coronavirus-German-Regions/master/data/de-states/de-state-DE-total.tsv
+          echo Retrieve data for total number of infections data from https://raw.githubusercontent.com/entorb/COVID-19-Coronavirus-German-Regions/master/data/de-states/de-state-DE-total.tsv,
+          wget -O data/source/de-state-DE-total-infections.tsv https://raw.githubusercontent.com/entorb/COVID-19-Coronavirus-German-Regions/master/data/de-states/de-state-DE-total.tsv
           
           echo Retrieve vaccinination rates from https://raw.githubusercontent.com/ard-data/2020-rki-impf-archive/master/data/9_csv_v2/all.csv
           wget -O data/source/all-vaccine.csv https://raw.githubusercontent.com/ard-data/2020-rki-impf-archive/master/data/9_csv_v2/all.csv
