--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -66,6 +66,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add data/*
+          git add plots-gnuplot/*
           git diff-index --quiet HEAD || git commit -m "auto update"  | grep -v rewrite
       - name: data push changes
         uses: ad-m/github-push-action@master
